Az országok(master;Autók.html)

--- a/Autók.html
+++ b/Autók.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Amerikai autók</li>
+        <li>Japán autók</li>
+        <li>Német autók</li>
+        <li>Olasz autók<li>
+        <li>Angol autók</li>
     </ul>
 </body>
 </html>
