--- a/hB_Englishcars.html
+++ b/hB_Englishcars.html
@@ -5,16 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="bootstrap.css">
-    <link rel="stylesheet" href="Autók.css">
-    <title>Autó márkák</title>
+    <link rel="stylesheet" href="cB_Autók.css">
+    <link rel="stylesheet" href="cK_Autók.css">
+    <title>Document</title>
 </head>
 <body>
-    <ul>
-        <li>Amerikai autók</li>
-        <li>Japán autók</li>
-        <li>Német autók</li>
-        <li>Olasz autók<li>
-        <li>Angol autók</li>
-    </ul>
+    
 </body>
 </html>
