Html linkelés és méretek(master;html)

--- a/hK_Autók.html
+++ b/hK_Autók.html
@@ -10,12 +10,17 @@
     <title>Autó márkák</title>
 </head>
 <body>
+    <div class="d-block d-sm-none">XS</div>
+    <div class="d-none d-sm-block d-md-none">SM</div>
+    <div class="d-none d-md-block d-lg-none">MD</div>
+    <div class="d-none d-lg-block d-xl-none">LG</div>
+    <div class="d-none d-xl-block">XL</div>
     <ul>
-        <li>Amerikai autók</li>
-        <li>Japán autók</li>
-        <li>Német autók</li>
-        <li>Olasz autók<li>
-        <li>Angol autók</li>
+        <li><a href="hK_Americancars.html">Amerikai autók</a></li>
+        <li><a href="hB_Japanesecars.html">Japán autók</a></li>
+        <li><a href="hK_Germancars.html">Német autók</a></li>
+        <li><a href="hB_Italiancars.html">Olasz autók</a><li>
+        <li><a href="hB_Englishcars.html">Angol autók</a></li>
     </ul>
 </body>
 </html>
