--- a/hK_Americancars.html
+++ b/hK_Americancars.html
@@ -10,6 +10,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="d-block d-sm-none">XS</div>
+    <div class="d-none d-sm-block d-md-none">SM</div>
+    <div class="d-none d-md-block d-lg-none">MD</div>
+    <div class="d-none d-lg-block d-xl-none">LG</div>
+    <div class="d-none d-xl-block">XL</div>
 </body>
 </html>
