--- a/hB_Japanesecars.html
+++ b/hB_Japanesecars.html
@@ -15,5 +15,11 @@
     <div class="d-none d-md-block d-lg-none">MD</div>
     <div class="d-none d-lg-block d-xl-none">LG</div>
     <div class="d-none d-xl-block">XL</div>
+    <ul>
+        <li>Mitsubishi</li>
+        <li>Subaru</li>
+        <li>Honda</li>
+        <li>Toyota</li>
+    </ul>
 </body>
 </html>
