Kis változtatások (master;.html,.css;K)

--- a/hK_Autók.html
+++ b/hK_Autók.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="cK_Autók.css">
     <title>Autó márkák</title>
 </head>
-<body>
+<body background="patte">
     <div class="d-block d-sm-none">XS</div>
     <div class="d-none d-sm-block d-md-none">SM</div>
     <div class="d-none d-md-block d-lg-none">MD</div>
@@ -22,5 +22,8 @@
         <li><a href="hB_Italiancars.html">Olasz autók</a><li>
         <li><a href="hB_Englishcars.html">Angol autók</a></li>
     </ul>
+    <div>
+
+    </div>
 </body>
 </html>
