Kis változtatások (master;.html,;K)

--- a/hK_Germancars.html
+++ b/hK_Germancars.html
@@ -16,10 +16,10 @@
     <div class="d-none d-lg-block d-xl-none">LG</div>
     <div class="d-none d-xl-block">XL</div>
     <ul>
-        Dodge
-        Shelby
-        Ford
-        Chevrolet
+        BMW
+        Audi
+        Mercedes
+        Porsche
     </ul>
 </body>
 </html>
