--- a/hK_Germancars.html
+++ b/hK_Germancars.html
@@ -16,10 +16,10 @@
     <div class="d-none d-lg-block d-xl-none">LG</div>
     <div class="d-none d-xl-block">XL</div>
     <ul>
-        BMW
-        Audi
-        Mercedes
-        Porsche
+        <a href="#BMW">BMW</a>
+        <a href="#Audi">Audi</a>
+        <a href="#Mercedes">Mercedes</a>
+        <a href="#Porsche">Porsche</a>
     </ul>
 </body>
 </html>
