Autó átírás; .html

--- a/hK_Americancars.html
+++ b/hK_Americancars.html
@@ -18,7 +18,7 @@
     <ul>
         <li><a href="#Dodge">Dodge</a></li>
         <li><a href="#Shelby">Shelby</a></li>
-        <li><a href="#Ford">Ford</a></li>
+        <li><a href="#Cadilac">Cadilac</a></li>
         <li><a href="#Chevrolet">Chevrolet</a></li>
     </ul>
 </body>
