icon1;Autók.html

--- a/hK_Autók.html
+++ b/hK_Autók.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="cB_Autók.css">
     <link rel="stylesheet" href="cK_Autók.css">
     <title>Autó márkák</title>
+    <link href="icon1.png" rel="shortcut icon" sizes="180x180">
 </head>
 <body background="patte">
     <div class="d-block d-sm-none">XS</div>
