--- a/hK_Americancars.html
+++ b/hK_Americancars.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="cB_Autók.css">
     <link rel="stylesheet" href="cK_Autók.css">
     <title>Document</title>
+    <link href="Americancars.png" rel="shortcut icon" sizes="180x180">
 </head>
 <body>
     <div class="d-block d-sm-none">XS</div>
