--- a/hK_Autók.html
+++ b/hK_Autók.html
@@ -20,11 +20,12 @@
         <li><a href="hK_Americancars.html">Amerikai autók</a></li>
         <li><a href="hB_Japanesecars.html">Japán autók</a></li>
         <li><a href="hK_Germancars.html">Német autók</a></li>
-        <li><a href="hB_Italiancars.html">Olasz autók</a><li>
+        <li><a href="hB_Italiancars.html">Olasz autók</a></li>
         <li><a href="hB_Englishcars.html">Angol autók</a></li>
     </ul>
     <div>
-
+        Napjainkban már kevés az olyan család ahol nincs egyetlen autó sem, azonban ahhoz, hogy idáig eljutottunk nagyon sok     fejlesztésen kellett keresztül menni. 
+        Az autó gyártás a kezdetektől fogva egy csodálato
     </div>
 </body>
 </html>
