Japánok(Japanesecar.html)

--- a/hB_Italiancars.html
+++ b/hB_Italiancars.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="bootstrap.css">
-    <link rel="stylesheet" href="cB_Autók.css">
-    <link rel="stylesheet" href="cK_Autók.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="c_Autók.css">
+    <title>Italian cars</title>
 </head>
 <body>
     <div class="d-block d-sm-none">XS</div>
@@ -16,10 +15,10 @@
     <div class="d-none d-lg-block d-xl-none">LG</div>
     <div class="d-none d-xl-block">XL</div>
     <ul>
-        <li>Ferrari</li>
-        <li>Alfa Romeo</li>
-        <li>Lamborghini</li>
-        <li>Pagani</li>
+        <li><a href="#Ferrari">Ferrari</a></li>
+        <li><a href="#Alfa Romeo">Alfa Romeo</a></li>
+        <li><a href="#Lamborghini">Lamborghini</a></li>
+        <li><a href="Pagani">Pagani</a></li>
     </ul>
 </body>
 </html>
