--- a/hB_Japanesecars.html
+++ b/hB_Japanesecars.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="bootstrap.css">
-    <link rel="stylesheet" href="cB_Autók.css">
-    <link rel="stylesheet" href="cK_Autók.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="c_Autók.css">
+    <title>Japanese cars</title>
 </head>
 <body>
     <div class="d-block d-sm-none">XS</div>
@@ -16,10 +15,17 @@
     <div class="d-none d-lg-block d-xl-none">LG</div>
     <div class="d-none d-xl-block">XL</div>
     <ul>
-        <li>Mitsubishi</li>
-        <li>Subaru</li>
-        <li>Honda</li>
-        <li>Toyota</li>
+        <li><a href="#Mitsubishi">Mitsubishi</a></li>
+        <li><a href="#Subaru">Subaru</a></li>
+        <li><a href="#Honda">Honda</a></li>
+        <li><a href="#Toyota">Toyota</a></li>
+    </ul>
+    <h1>Mitsubishi</h1>
+        <p>A Mitsubishi mint márka egy független japán multinacionális vállalatokat tömörítő cégcsoport, japánul "keirecu". Ebben a cégcsoportban résztvevő cégek egymástól függetlenül végzik üzleti vagy egyéb tevékenységeiket. A keirecu-ban lévő 600 cég közül 500-nak a nevében benne van a "Mitsubishi" szó.</p>
+    <h1 id="Subaru">Subaru</h1>
+    <h4>Források</h4>
+    <ul>
+        <li><a href="https://hu.wikipedia.org/wiki/Mitsubishi">https://hu.wikipedia.org/wiki/Mitsubishi</a> 2024.05.25</li>
     </ul>
 </body>
 </html>
