--- a/hB_Englishcars.html
+++ b/hB_Englishcars.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="bootstrap.css">
-    <link rel="stylesheet" href="cB_Autók.css">
-    <link rel="stylesheet" href="cK_Autók.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="c_Autók.css">
+    <title>English cars</title>
 </head>
 <body>
     <div class="d-block d-sm-none">XS</div>
@@ -16,10 +15,10 @@
     <div class="d-none d-lg-block d-xl-none">LG</div>
     <div class="d-none d-xl-block">XL</div>
     <ul>
-        <li>Aston Martin</li>
-        <li>Jaguar</li>
-        <li>Lotus</li>
-        <li>Rolls-Royce</li>
+        <li><a href="Aston Martin">Aston Martin</a></li>
+        <li><a href="Jaguar">Jaguar</a></li>
+        <li><a href="Lotus">Lotus</a></li>
+        <li><a href="Rolls-Royce">Rolls-Royce</a></li>
     </ul>
 </body>
 </html>
