--- a/hK_Autók.html
+++ b/hK_Autók.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="cB_Autók.css">
     <link rel="stylesheet" href="cK_Autók.css">
-    <title>Autó márkák</title>
+    <title>Autó</title>
     <link href="icon1.png" rel="shortcut icon" sizes="180x180">
 </head>
 <body background="patte">
@@ -25,7 +25,10 @@
     </ul>
     <div>
         Napjainkban már kevés az olyan család ahol nincs egyetlen autó sem, azonban ahhoz, hogy idáig eljutottunk nagyon sok     fejlesztésen kellett keresztül menni. 
-        Az autó gyártás a kezdetektől fogva egy csodálato
+        Az autó gyártás a kezdetektől fogva egy csodálatos "művészet" volt. Persze azt sem szabad elfelejteni, hogy ki volt az egésznek a szülőatyja, nem más mint Karl Benz aki motorok fejlesztésével foglalkozott és 1884-ben el is készítette már első önjáró háromkerekű kocsiját, melyet egy elektromos gyújtású, 0,9 lóerős, egyhengeres, nyégyütemű Otto-féle motor hajtott.
+    </div>
+    <div>
+        <a href="4-Stroke-Engine.gif" ><img src="4-Stroke-Engine.gif"></a>
     </div>
 </body>
 </html>
