Olaszok(Italiancars.html)

--- a/hB_Italiancars.html
+++ b/hB_Italiancars.html
@@ -16,10 +16,19 @@
     <div class="d-none d-lg-block d-xl-none">LG</div>
     <div class="d-none d-xl-block">XL</div>
     <ul>
-        <li>Ferrari</li>
-        <li>Alfa Romeo</li>
-        <li>Lamborghini</li>
-        <li>Pagani</li>
+        <li><a href="#Ferrari">Ferrari</a></li>
+        <li><a href="#Alfa Romeo">Alfa Romeo</a></li>
+        <li><a href="#Lamborghini">Lamborghini</a></li>
+        <li><a href="#Pagani">Pagani</a></li>
+    </ul>
+    <h1>Ferrari</h1>
+    <p>A Ferrari mára már a világ egyik lehíresebb és legnagyobb bevételel rendelkező autómárka. Egy ideig egy Ferrari tartotta a lágdrágábban elkelt autó világrekordját, amit 2009. május 17-én álított fel a 250 Testa Rossát tipusú autó a maga 12,1 millió dollárjával. Enzo Ferrari utóljára a Ferrari F40 bemutatását felügyelte.</p>
+    <p>Na de kezdjük az elején.</p>
+    <h5>Források</h5>
+    <ul>
+        <li><a href="https://hu.wikipedia.org/wiki/Ferrari">https://hu.wikipedia.org/wiki/Ferrari</a> 2024.05.30</li>
+        <li></li>
+        <li></li>
     </ul>
 </body>
 </html>
