--- a/hK_Autók.html
+++ b/hK_Autók.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="cB_Autók.css">
     <link rel="stylesheet" href="cK_Autók.css">
-    <title>Autó</title>
+    <title>Autók</title>
     <link href="icon1.png" rel="shortcut icon" sizes="180x180">
 </head>
 <body background="patte">
@@ -28,7 +28,7 @@
         Az autó gyártás a kezdetektől fogva egy csodálatos "művészet" volt. Persze azt sem szabad elfelejteni, hogy ki volt az egésznek a szülőatyja, nem más mint Karl Benz aki motorok fejlesztésével foglalkozott és 1884-ben el is készítette már első önjáró háromkerekű kocsiját, melyet egy elektromos gyújtású, 0,9 lóerős, egyhengeres, nyégyütemű Otto-féle motor hajtott.
     </div>
     <div>
-        <a href="4-Stroke-Engine.gif" ><img src="4-Stroke-Engine.gif"></a>
+        <a href="4-Stroke-Engine.gif" target="blank"><img src="4-Stroke-Engine.gif" alt="Otto-féle 4-ütemű motor" title="Ottó-féle 4-ütemű motor"></a>
     </div>
 </body>
 </html>
