--- a/hB_Italiancars.html
+++ b/hB_Italiancars.html
@@ -23,12 +23,14 @@
     </ul>
     <h1>Ferrari</h1>
     <p>A Ferrari mára már a világ egyik lehíresebb és legnagyobb bevételel rendelkező autómárka. Egy ideig egy Ferrari tartotta a lágdrágábban elkelt autó világrekordját, amit 2009. május 17-én álított fel a 250 Testa Rossát tipusú autó a maga 12,1 millió dollárjával. Enzo Ferrari utóljára a Ferrari F40 bemutatását felügyelte.</p>
-    <p>Na de kezdjük az elején.</p>
-    <h5>Források</h5>
-    <ul>
-        <li><a href="https://hu.wikipedia.org/wiki/Ferrari">https://hu.wikipedia.org/wiki/Ferrari</a> 2024.05.30</li>
-        <li></li>
-        <li></li>
-    </ul>
+    <p>Na de kezdjük az elején. Enzo Ferrari 1929-ban alapította a Ferrarit akkor még Scuderia Ferrari néven, egy ideig csak versenyautókat gyártottak, majd 1947-ben megjelent az első utcai autójuk.</p>
+    <div class="Forrasok">
+        <h6>Források</h6>
+        <ul>
+            <li><a href="https://hu.wikipedia.org/wiki/Ferrari">https://hu.wikipedia.org/wiki/Ferrari</a> 2024.05.30</li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
 </body>
 </html>
