--- a/hK_Autók.html
+++ b/hK_Autók.html
@@ -10,24 +10,24 @@
     <link href="icon1.png" rel="shortcut icon" sizes="180x180">
 </head>
 <body background="patte">
-    <div class="d-block d-sm-none">XS</div>
-    <div class="d-none d-sm-block d-md-none">SM</div>
-    <div class="d-none d-md-block d-lg-none">MD</div>
-    <div class="d-none d-lg-block d-xl-none">LG</div>
-    <div class="d-none d-xl-block">XL</div>
-    <ul>
-        <li><a href="hK_Americancars.html">Amerikai autók</a></li>
-        <li><a href="hB_Japanesecars.html">Japán autók</a></li>
-        <li><a href="hK_Germancars.html">Német autók</a></li>
-        <li><a href="hB_Italiancars.html">Olasz autók</a></li>
-        <li><a href="hB_Englishcars.html">Angol autók</a></li>
-    </ul>
-    <div>
-        Napjainkban már kevés az olyan család ahol nincs egyetlen autó sem, azonban ahhoz, hogy idáig eljutottunk nagyon sok     fejlesztésen kellett keresztül menni. 
-        Az autó gyártás a kezdetektől fogva egy csodálatos "művészet" volt. Persze azt sem szabad elfelejteni, hogy ki volt az egésznek a szülőatyja, nem más mint Karl Benz aki motorok fejlesztésével foglalkozott és 1884-ben el is készítette már első önjáró háromkerekű kocsiját, melyet egy elektromos gyújtású, 0,9 lóerős, egyhengeres, nyégyütemű Otto-féle motor hajtott.
-    </div>
-    <div>
-        <a href="4-Stroke-Engine.gif" target="blank"><img src="4-Stroke-Engine.gif" alt="Otto-féle 4-ütemű motor" title="Ottó-féle 4-ütemű motor"></a>
+    <div id="main_div">
+        <div class="d-block d-sm-none">XS</div>
+        <div class="d-none d-sm-block d-md-none">SM</div>
+        <div class="d-none d-md-block d-lg-none">MD</div>
+        <div class="d-none d-lg-block d-xl-none">LG</div>
+        <div class="d-none d-xl-block">XL</div>
+        <ul>
+            <li><a href="hK_Americancars.html" target="blank">Amerikai autók</a></li>
+            <li><a href="hB_Japanesecars.html" target="blank">Japán autók</a></li>
+            <li><a href="hB_Italiancars.html" target="blank">Olasz autók</a></li>
+        </ul>
+        <p>
+            Napjainkban már kevés az olyan család ahol nincs egyetlen autó sem, azonban ahhoz, hogy idáig eljutottunk nagyon sok     fejlesztésen kellett keresztül menni. 
+            Az autó gyártás a kezdetektől fogva egy csodálatos "művészet" volt. Persze azt sem szabad elfelejteni, hogy ki volt az egésznek a szülőatyja, nem más mint Karl Benz aki motorok fejlesztésével foglalkozott és 1884-ben el is készítette már első önjáró háromkerekű kocsiját, melyet egy elektromos gyújtású, 0,9 lóerős, egyhengeres, nyégyütemű Otto-féle motor hajtott.
+        </p>
+        <div>
+            <img src="4-Stroke-Engine.gif" alt="Otto-féle 4-ütemű motor" title="Ottó-féle 4-ütemű motor">
+        </div>
     </div>
 </body>
 </html>
