--- a/hB_Italiancars.html
+++ b/hB_Italiancars.html
@@ -9,27 +9,33 @@
     <title>Italian cars</title>
 </head>
 <body>
-    <div class="d-block d-sm-none">XS</div>
-    <div class="d-none d-sm-block d-md-none">SM</div>
-    <div class="d-none d-md-block d-lg-none">MD</div>
-    <div class="d-none d-lg-block d-xl-none">LG</div>
-    <div class="d-none d-xl-block">XL</div>
-    <ul>
-        <li><a href="#Ferrari">Ferrari</a></li>
-        <li><a href="#Alfa Romeo">Alfa Romeo</a></li>
-        <li><a href="#Lamborghini">Lamborghini</a></li>
-        <li><a href="#Pagani">Pagani</a></li>
-    </ul>
-    <h1>Ferrari</h1>
-    <p>A Ferrari mára már a világ egyik lehíresebb és legnagyobb bevételel rendelkező autómárka. Egy ideig egy Ferrari tartotta a lágdrágábban elkelt autó világrekordját, amit 2009. május 17-én álított fel a 250 Testa Rossát tipusú autó a maga 12,1 millió dollárjával. Enzo Ferrari utóljára a Ferrari F40 bemutatását felügyelte.</p>
-    <p>Na de kezdjük az elején. Enzo Ferrari 1929-ban alapította a Ferrarit akkor még Scuderia Ferrari néven, egy ideig csak versenyautókat gyártottak, majd 1947-ben megjelent az első utcai autójuk.</p>
-    <div class="Forrasok">
-        <h6>Források</h6>
-        <ul>
-            <li><a href="https://hu.wikipedia.org/wiki/Ferrari">https://hu.wikipedia.org/wiki/Ferrari</a> 2024.05.30</li>
-            <li></li>
-            <li></li>
-        </ul>
+    <div id="cim">
+        <div class="d-block d-sm-none">XS</div>
+        <div class="d-none d-sm-block d-md-none">SM</div>
+        <div class="d-none d-md-block d-lg-none">MD</div>
+        <div class="d-none d-lg-block d-xl-none">LG</div>
+        <div class="d-none d-xl-block">XL</div>
     </div>
+    <div class="container-fluid">
+        <div class="row">
+            <ul>
+                <li><a href="#Ferrari">Ferrari</a></li>
+                <li><a href="#Alfa Romeo">Alfa Romeo</a></li>
+                <li><a href="#Lamborghini">Lamborghini</a></li>
+                <li><a href="#Pagani">Pagani</a></li>
+            </ul>
+            <h1>Ferrari</h1>
+         <p>A Ferrari mára már a világ egyik lehíresebb és legnagyobb bevételel rendelkező autómárkája. Egy ideig egy Ferrari tartotta a lágdrágábban elkelt autó világrekordját, amit 2009. május 17-én álított fel a 250 Testa Rossát tipusú autó a maga 12,1 millió dollárjával.</p>
+         <p>Na de kezdjük az elején. Enzo Ferrari 1929-ban alapította a Ferrarit akkor még Scuderia Ferrari néven, amatőr versenyzók szponzorálására. Eleinte csak versenyautókat gyártottak, majd 1947-ben megjelent az első utcai autójuk. 1940-ben, amikor Enzo Ferrari felismerte, hogy szeretett csapatát, a Scuderiát az Alfa Romeo be akarja olvasztani, kilépett az Alfától és visszatért csapatához. Mivel jó ideig távol kellett maradnia a versenyektől, repülőgép-alkatrészeket és egyéb gépészeti termékeket gyártottak. A versenyeket a II. világháború is lehetetlenné tette. A gyár 1943-ban Maranellóba költözött, de 1944-ben lebombázták, és csak 1946-ra hozták helyre. A Ferrari 1969 óta volt a Fiat tulajdona, jelenleg a részvények 90%-át birtokolja az olasz autóipari óriás. Ám úgy néz ki, a Fiat és a Chrysler összeolvadása során ez a kapcsolat megszakad: hivatalosan is bejelentették, hogy a Ferrarit külön cégbe szervezik. A tulajdonosok persze ugyanazok lesznek, azaz a Fiat aktuális részvényesei birtokolják majd az önálló Ferrarit is. Enzo Ferrari utóljára az 1988-as Ferrari F40 bemutatását felügyelte.</p>
+         <div class="Forrasok">
+            <h6>Források</h6>
+            <ul>
+                <li><a href="https://hu.wikipedia.org/wiki/Ferrari">https://hu.wikipedia.org/wiki/Ferrari</a> 2024.05.30</li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+    </div>
+</div>
 </body>
 </html>
