--- a/hB_Italiancars.html
+++ b/hB_Italiancars.html
@@ -18,22 +18,44 @@
     </div>
     <div class="container-fluid">
         <div class="row">
+            <div class="col-xl-12">
+                <h1 id="főcím">Az Olasz autók</h1>
+            </div>
+        </div>
             <ul>
                 <li><a href="#Ferrari">Ferrari</a></li>
                 <li><a href="#Alfa Romeo">Alfa Romeo</a></li>
                 <li><a href="#Lamborghini">Lamborghini</a></li>
                 <li><a href="#Pagani">Pagani</a></li>
             </ul>
-            <h1>Ferrari</h1>
-         <p>A Ferrari mára már a világ egyik lehíresebb és legnagyobb bevételel rendelkező autómárkája. Egy ideig egy Ferrari tartotta a lágdrágábban elkelt autó világrekordját, amit 2009. május 17-én álított fel a 250 Testa Rossát tipusú autó a maga 12,1 millió dollárjával.</p>
-         <p>Na de kezdjük az elején. Enzo Ferrari 1929-ban alapította a Ferrarit akkor még Scuderia Ferrari néven, amatőr versenyzók szponzorálására. Eleinte csak versenyautókat gyártottak, majd 1947-ben megjelent az első utcai autójuk. 1940-ben, amikor Enzo Ferrari felismerte, hogy szeretett csapatát, a Scuderiát az Alfa Romeo be akarja olvasztani, kilépett az Alfától és visszatért csapatához. Mivel jó ideig távol kellett maradnia a versenyektől, repülőgép-alkatrészeket és egyéb gépészeti termékeket gyártottak. A versenyeket a II. világháború is lehetetlenné tette. A gyár 1943-ban Maranellóba költözött, de 1944-ben lebombázták, és csak 1946-ra hozták helyre. A Ferrari 1969 óta volt a Fiat tulajdona, jelenleg a részvények 90%-át birtokolja az olasz autóipari óriás. Ám úgy néz ki, a Fiat és a Chrysler összeolvadása során ez a kapcsolat megszakad: hivatalosan is bejelentették, hogy a Ferrarit külön cégbe szervezik. A tulajdonosok persze ugyanazok lesznek, azaz a Fiat aktuális részvényesei birtokolják majd az önálló Ferrarit is. Enzo Ferrari utóljára az 1988-as Ferrari F40 bemutatását felügyelte.</p>
-         <div class="Forrasok">
-            <h6>Források</h6>
-            <ul>
-                <li><a href="https://hu.wikipedia.org/wiki/Ferrari">https://hu.wikipedia.org/wiki/Ferrari</a> 2024.05.30</li>
-                <li></li>
-                <li></li>
-            </ul>
+            <div class="row">
+        <div class="col-xs-12 col-md-6">
+            <h2 id="#Ferrari">Ferrari</h2>
+                <p>A Ferrari mára már a világ egyik lehíresebb és legnagyobb bevételel rendelkező autómárkája. Egy ideig egy Ferrari tartotta a lágdrágábban elkelt autó világrekordját, amit 2009. május 17-én álított fel a 250 Testa Rossát tipusú autó a maga 12,1 millió dollárjával.</p>
+                <p>Na de kezdjük az elején. Enzo Ferrari 1929-ban alapította a Ferrarit akkor még Scuderia Ferrari néven, amatőr versenyzók szponzorálására. Eleinte csak versenyautókat gyártottak, majd 1947-ben megjelent az első utcai autójuk. 1940-ben, amikor Enzo Ferrari felismerte, hogy szeretett csapatát, a Scuderiát az Alfa Romeo be akarja olvasztani, kilépett az Alfától és visszatért csapatához. Mivel jó ideig távol kellett maradnia a versenyektől, repülőgép-alkatrészeket és egyéb gépészeti termékeket gyártottak. A versenyeket a II. világháború is lehetetlenné tette. A gyár 1943-ban Maranellóba költözött, de 1944-ben lebombázták, és csak 1946-ra hozták helyre. A Ferrari 1969 óta volt a Fiat tulajdona, jelenleg a részvények 90%-át birtokolja az olasz autóipari óriás. Ám úgy néz ki, a Fiat és a Chrysler összeolvadása során ez a kapcsolat megszakad: hivatalosan is bejelentették, hogy a Ferrarit külön cégbe szervezik. A tulajdonosok persze ugyanazok lesznek, azaz a Fiat aktuális részvényesei birtokolják majd az önálló Ferrarit is. Enzo Ferrari utóljára az 1988-as Ferrari F40 bemutatását felügyelte.</p>
+        </div>
+        <div class="col-xs-12 col-md-6">
+            <h2 id="#Alfa Romeo">Alfa Romeo</h2>
+                <p></p>
+                <p></p>
+        </div>
+        <div class="col-xs-12 col-md-6">
+            <h2 id="#Lamborghini">Lamborghini</h2>
+                <p></p>
+                <p></p>
+        </div>
+        <div class="col-xs-12 col-md-6">
+            <h2 id="#Pagani">Pagani</h2>
+                <p></p>
+                <p></p>
+        </div>
+            <div class="Forrasok">
+                <h6>Források</h6>
+                <ul>
+                    <li><a href="https://hu.wikipedia.org/wiki/Ferrari">https://hu.wikipedia.org/wiki/Ferrari</a> 2024.05.30</li>
+                    <li></li>
+                    <li></li>
+                </ul>
         </div>
     </div>
 </div>
