--- a/hB_Japanesecars.html
+++ b/hB_Japanesecars.html
@@ -14,18 +14,42 @@
     <div class="d-none d-md-block d-lg-none">MD</div>
     <div class="d-none d-lg-block d-xl-none">LG</div>
     <div class="d-none d-xl-block">XL</div>
+    <div class="row">
+        <div class="col-xl-12">
+            <h1>A japán autók</h1>
+        </div>
+    </div>
     <ul>
         <li><a href="#Mitsubishi">Mitsubishi</a></li>
         <li><a href="#Subaru">Subaru</a></li>
         <li><a href="#Honda">Honda</a></li>
         <li><a href="#Toyota">Toyota</a></li>
     </ul>
-    <h1>Mitsubishi</h1>
-        <p>A Mitsubishi mint márka egy független japán multinacionális vállalatokat tömörítő cégcsoport, japánul "keirecu". Ebben a cégcsoportban résztvevő cégek egymástól függetlenül végzik üzleti vagy egyéb tevékenységeiket. A keirecu-ban lévő 600 cég közül 500-nak a nevében benne van a "Mitsubishi" szó.</p>
-    <h1 id="Subaru">Subaru</h1>
-    <h4>Források</h4>
-    <ul>
-        <li><a href="https://hu.wikipedia.org/wiki/Mitsubishi">https://hu.wikipedia.org/wiki/Mitsubishi</a> 2024.05.25</li>
-    </ul>
+    <div class="row">
+        <div class="col-xs-12 col-md-6">
+            <h2 id="#Mitsubishi">Mitsubishi</h2>
+                <p>A Mitsubishi mint márka egy független japán multinacionális vállalatokat tömörítő cégcsoport, japánul "keirecu". Ebben a cégcsoportban résztvevő cégek egymástól függetlenül végzik üzleti vagy egyéb tevékenységeiket. A keirecu-ban lévő 600 cég közül 500-nak a nevében benne van a "Mitsubishi" szó.</p>
+                <p></p>
+        </div>
+        <div class="col-xs-12 col-md-6">
+            <h2 id="Subaru">Subaru</h2>
+                <p></p>
+                <p></p>
+        </div>
+        <div class="col-xs-12 col-md-6">
+            <h2 id="#Honda">Honda</h2>
+                <p></p>
+                <p></p>
+        </div>
+        <div class="col-xs-12 col-md-6">
+            <h2 id="#Toyota">Toyota</h2>
+                <p></p>
+                <p></p>
+        </div>
+        <h4>Források</h4>
+        <ul>
+            <li><a href="https://hu.wikipedia.org/wiki/Mitsubishi">https://hu.wikipedia.org/wiki/Mitsubishi</a> 2024.05.25</li>
+        </ul>
+    </div>
 </body>
 </html>
