--- a/hK_Autók.html
+++ b/hK_Autók.html
@@ -10,6 +10,11 @@
     <link href="icon1.png" rel="shortcut icon" sizes="180x180">
 </head>
 <body background="patte">
+    <header>
+        <a href="hK_Americancars.html" target="blank">Amerikai autók</a>
+        <a href="hB_Japanesecars.html" target="blank">Japán autók</a>
+        <a href="hB_Italiancars.html" target="blank">Olasz autók</a>
+    </header>
     <div id="main_div">
         <div class="d-block d-sm-none">XS</div>
         <div class="d-none d-sm-block d-md-none">SM</div>
