--- a/hK_Autók.html
+++ b/hK_Autók.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <title>Autók</title>
     <link href="icon1.png" rel="shortcut icon" sizes="180x180">
 </head>
+
 <body background="patte">
     <header>
         <a href="hK_Americancars.html" target="blank">Amerikai autók</a>
@@ -27,12 +29,20 @@
             <li><a href="hB_Italiancars.html" target="blank">Olasz autók</a></li>
         </ul>
         <p>
-            Napjainkban már kevés az olyan család ahol nincs egyetlen autó sem, azonban ahhoz, hogy idáig eljutottunk nagyon sok     fejlesztésen kellett keresztül menni. 
-            Az autó gyártás a kezdetektől fogva egy csodálatos "művészet" volt. Persze azt sem szabad elfelejteni, hogy ki volt az egésznek a szülőatyja, nem más mint Karl Benz aki motorok fejlesztésével foglalkozott és 1884-ben el is készítette már első önjáró háromkerekű kocsiját, melyet egy elektromos gyújtású, 0,9 lóerős, egyhengeres, nyégyütemű Otto-féle motor hajtott.
+            Napjainkban már kevés az olyan család ahol nincs egyetlen autó sem, azonban ahhoz, hogy idáig eljutottunk
+            nagyon sok fejlesztésen kellett keresztül menni.
+            Az autó gyártás a kezdetektől fogva egy csodálatos "művészet" volt. Persze azt sem szabad elfelejteni, hogy
+            ki volt az egésznek a szülőatyja, nem más mint Karl Benz aki motorok fejlesztésével foglalkozott és 1884-ben
+            el is készítette már első önjáró háromkerekű kocsiját, melyet egy elektromos gyújtású, 0,9 lóerős,
+            egyhengeres, nyégyütemű Otto-féle motor hajtott.
         </p>
         <div>
             <img src="4-Stroke-Engine.gif" alt="Otto-féle 4-ütemű motor" title="Ottó-féle 4-ütemű motor">
         </div>
+        <p>
+            Azóta rengeteget fejlődött a tudomány, manapság már az üzemanyag gyártás is hatékonyabb, lett.
+        </p>
     </div>
 </body>
+
 </html>
