Japánok(Japanesecars.html)

--- a/hB_Italiancars.html
+++ b/hB_Italiancars.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="c_Autók.css">
+    <link href="Lamborghini.png" rel="shortcut icon" sizes="180x180">
     <title>Italian cars</title>
 </head>
 <body>
@@ -46,8 +47,8 @@
         </div>
         <div class="col-xs-12 col-md-6">
             <h2 id="#Pagani">Pagani</h2>
-                <p></p>
-                <p></p>
+                <p><a href="Pagani_nagy.png"><img src="Pagani.png" alt="Pagani Huayra Codalunga" title="Pagani Huayra Codalunga" class="Képek"></a>Számos egyedi vagy limitált Pagani készült, 2 fő tömbben, Zondák és Huayrák. a jelenlegi legdrágább Pagani, a 7 millió dolláros Pagani Huayra Codalunga. A Codalunga a 60-as évek versenyautóinak vonásait hozza vissza a köztudatba, egy kisebb csavarral.</p>
+                <p>Hosszú éveken keresztül a Lamborghini tervezőgárdáját erősítette, itt élte ki az autógyártás iránti szenvedélyét. Miután kreativitására a Lamborghini nem volt vevő, 1992-ben a családi vagyon, és némi spórolt pénz segítségével gondolt egy merészet, és saját autógyárat hozott létre egyedi sportautók gyártására. Sokan őrültnek tartották, hogy ezt Olaszországban a Ferrari, a Lamborghini, a Maserati árnyékában határozta el. Évekig tartó fejlesztésbe fogott. A Zonda C12 1999-ben debütált a Genfi Autószalonon. Üzletpolitikája, hogy sorozatban nem gyárt autókat, csak megrendelésre. Úgy tűnik, hogy ez a kereslet egyelőre nem szűnik, annak ellenére, hogy egy-egy gépkocsi ára felszereléstől függően hárommillió dollár körül van.</p>
         </div>
             <div class="Forrasok">
                 <h6>Források</h6>
@@ -55,8 +56,10 @@
                     <li><a href="https://hu.wikipedia.org/wiki/Ferrari">https://hu.wikipedia.org/wiki/Ferrari</a> 2024.05.30</li>
                     <li><a href="https://hu.wikipedia.org/wiki/Alfa_Romeo">https://hu.wikipedia.org/wiki/Alfa_Romeo</a> 2024.06.01</li>
                     <li><a href="https://roadster.hu/alfa-romeo-33-stradale/">https://roadster.hu/alfa-romeo-33-stradale/</a> 2024.06.02</li>
-                    <li></li>
-                    <li></li>
+                    <li><a href="https://hu.wikipedia.org/wiki/Lamborghini">https://hu.wikipedia.org/wiki/Lamborghini</a> 2024.06.02</li>
+                    <li><a href="https://www.autonavigator.hu/cikkek/ilyen-lehet-a-lamborghini-veneno-roadster/">https://www.autonavigator.hu/cikkek/ilyen-lehet-a-lamborghini-veneno-roadster/</a> 2024.06.02</li>
+                    <li><a href="http://fischergyorgyauto.hu/a-pagani-tortenete/">http://fischergyorgyauto.hu/a-pagani-tortenete/</a> 2024.06.02</li>
+                    <li><a href="https://www.motorauthority.com/news/1138504_pagani-shows-second-of-five-huayra-codalungas">https://www.motorauthority.com/news/1138504_pagani-shows-second-of-five-huayra-codalungas</a> 2024.06.02</li>
                 </ul>
         </div>
     </div>
