--- a/hK_Autók.html
+++ b/hK_Autók.html
@@ -28,6 +28,7 @@
             <li><a href="hB_Japanesecars.html" target="blank">Japán autók</a></li>
             <li><a href="hB_Italiancars.html" target="blank">Olasz autók</a></li>
         </ul>
+        <>
         <p>
             Napjainkban már kevés az olyan család ahol nincs egyetlen autó sem, azonban ahhoz, hogy idáig eljutottunk
             nagyon sok fejlesztésen kellett keresztül menni.
@@ -40,8 +41,9 @@
             <img src="4-Stroke-Engine.gif" alt="Otto-féle 4-ütemű motor" title="Ottó-féle 4-ütemű motor">
         </div>
         <p>
-            Azóta rengeteget fejlődött a tudomány, manapság már az üzemanyag gyártás is hatékonyabb, lett.
+            Azóta rengeteget fejlődött a tudomány, manapság már több féle üzem anyag is létezik, plusz feltaláltak elektromos, hybrid .
         </p>
+        
     </div>
 </body>
 
