--- a/hK_Autók.html
+++ b/hK_Autók.html
@@ -29,21 +29,25 @@
             <li><a href="hB_Italiancars.html" target="blank">Olasz autók</a></li>
         </ul>
         <>
-        <p>
-            Napjainkban már kevés az olyan család ahol nincs egyetlen autó sem, azonban ahhoz, hogy idáig eljutottunk
-            nagyon sok fejlesztésen kellett keresztül menni.
-            Az autó gyártás a kezdetektől fogva egy csodálatos "művészet" volt. Persze azt sem szabad elfelejteni, hogy
-            ki volt az egésznek a szülőatyja, nem más mint Karl Benz aki motorok fejlesztésével foglalkozott és 1884-ben
-            el is készítette már első önjáró háromkerekű kocsiját, melyet egy elektromos gyújtású, 0,9 lóerős,
-            egyhengeres, nyégyütemű Otto-féle motor hajtott.
-        </p>
-        <div>
-            <img src="4-Stroke-Engine.gif" alt="Otto-féle 4-ütemű motor" title="Ottó-féle 4-ütemű motor">
-        </div>
-        <p>
-            Azóta rengeteget fejlődött a tudomány, manapság már több féle üzem anyag is létezik, plusz feltaláltak elektromos, hybrid .
-        </p>
-        
+            <p>
+                Napjainkban már kevés az olyan család ahol nincs egyetlen autó sem, azonban ahhoz, hogy idáig
+                eljutottunk
+                nagyon sok fejlesztésen kellett keresztül menni.
+                Az autó gyártás a kezdetektől fogva egy csodálatos "művészet" volt. Persze azt sem szabad elfelejteni,
+                hogy
+                ki volt az egésznek a szülőatyja, nem más mint Karl Benz aki motorok fejlesztésével foglalkozott és
+                1884-ben
+                el is készítette már első önjáró háromkerekű kocsiját, melyet egy elektromos gyújtású, 0,9 lóerős,
+                egyhengeres, nyégyütemű Otto-féle motor hajtott.
+            </p>
+            <div>
+                <img src="4-Stroke-Engine.gif" alt="Otto-féle 4-ütemű motor" title="Ottó-féle 4-ütemű motor">
+            </div>
+            <p>
+                Azóta rengeteget fejlődött a tudomány, manapság már több féle üzem anyag is létezik, plusz feltaláltak
+                elektromos és hybrid autókat, a hidrogént pedig már a jövő üzemanyagaként emlegeteik.
+            </p>
+
     </div>
 </body>
 
